Move doubles library to its own source set